<resources>
    <string name="app_name">Calculator</string>
    <string name="zero_string">0</string>
    <string name="divide_string">÷</string>
    <string name="multiply_string">x</string>
    <string name="subtract_string">-</string>
    <string name="add_string">+</string>
    <string name="tan">tan</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
</resources>
